--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,35 @@ repositories {
 }
 
 dependencies {
+    // SPRING
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+
+    // TEMPLATE
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // webjars.npm
+    implementation 'org.webjars.npm:vue:3.3.11'
+    implementation 'org.webjars.npm:bootstrap:5.2.3'
+    implementation 'org.webjars.npm:axios:1.5.1'
+    implementation 'org.webjars.npm:sockjs-client:1.6.1'
+
+    // webjars.classic
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+    implementation 'org.webjars:webjars-locator-core:0.55'
+
+    // json > java
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // LOMBOK
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // TEST
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
