--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8090
 spring.application.name=chatting
+
+# Dev Option
+spring.thymeleaf.cache=false
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
