--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name=chatting
 spring.thymeleaf.cache=false
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
+
+# thymeleaf Option
+spring.thymeleaf.encoding=utf-8
