MODIFY: build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+    // SPRING SECURITY
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-client:5.7.11'
+
     // TEMPLATE
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     // sockjs, stomp, gson
     implementation 'org.webjars:sockjs-client:1.5.1'
