--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.devtools.restart.enabled=false
 
 # thymeleaf Option
 spring.thymeleaf.encoding=utf-8
+
+# Column name snake to camel
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:/mappers/*.xml
+
+# profile management
+spring.profiles.include=local
