FEAT: 네이버 소셜 로그인 구현

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,java,eclipse,maven,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,java,eclipse,maven,gradle
 
+### DB info ###
+application-local.properties
+
 ### Eclipse ###
 .metadata
 bin/
