--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:/mappers/*.xml
 
 # profile management
-spring.profiles.include=local
+spring.profiles.include=dev
